[tool.poetry]
name = "cyberball-mist-analysis"
version = "0.1.0"
description = "code withholding the data-analysis part of the cyberball mist stuy"
authors = ["jonvdrdo <jonvdrdo.vanderdonckt@ugent.be>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
pandas = "^1.4.0"
numpy = "^1.22.1"
pyfunctional = "^1.4.3"
tsflex = "^0.2.3"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
pyarrow = "^6.0.1"
pingouin = "^0.5.0"
ipython = "^8.0.1"
catboost = "^1.0.5"
plotly-resampler = "^0.6.4"
neurokit2 = "^0.2.0"
hrv-analysis = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "22.3.0"
memory-profiler = "^0.60.0"
isort = "^5.10.1"
ipywidgets = "^7.6.5"
jupyterlab-code-formatter = "^1.4.10"
jupyterlab-lsp = "^3.10.1"
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
line-profiler = "^3.5.1"
dash-bootstrap-components = "^1.1.0"
snakeviz = "^2.1.1"
PyWavelets = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
